--- a/src/assets/styles/AssistantsSpace.css
+++ b/src/assets/styles/AssistantsSpace.css
@@ -3,37 +3,17 @@
 /* ----------------------- the main section css ----------------------------- */
 
 
-.main-space {
-    background-color: rgb(255, 255, 255);
-    position: relative; /* Changed from absolute to relative */
-    top: 0; /* Removed top as it is no longer necessary */
-    margin-top: -8rem;
-    /* left: 20%; */
-    right: 25%;
-    transform: translateX(28%); /* Only horizontally center the main section */
-    z-index: 10;
-    min-height: 100vh;
-    height: auto;
-    min-width: 40%;
-    border-radius: 32px;
-    padding: 3rem;
-    border: 1px rgb(216, 216, 216) solid;
-}
-
-
 
 .assistants-space-container {
     background-color: #fff;
     position: relative;
-    margin-top: -8rem;
-    right: 25%;
 
-    transform: translateX(33%); /* Adjust horizontal centering */
     z-index: 10;
     min-height: 100vh;
-    max-width: 90%; /* Adjust width for better responsiveness */
-    border-radius: 32px;
-    padding: 3rem;
+    max-width: 100%; /* Adjust the width */
+    padding: 3rem 0rem;
+    margin-top: 7rem; /* Push content below the fixed header */
+
     border: 1px solid rgb(216, 216, 216);
   }
 
@@ -102,22 +82,20 @@
     margin-left: 10px;
   }
   
-  /* AI Voice Section */
   .ai-voice-section {
     margin-top: 50px;
   }
   
   .ai-voice-image {
     margin-top: 3rem;
-    width: 20rem; /* Adjust width for better responsiveness */
-    max-width: 100%; /* Ensure it fits smaller screens */
-    border-radius: 12px; /* Optional for a polished look */
+    width: 20rem; 
+    max-width: 100%; 
+    border-radius: 12px; 
   }
-  
-  /* Responsive Adjustments */
+/*   
   @media (max-width: 992px) {
     .assistants-space-container {
-      max-width: 90%; /* Reduce max width for smaller screens */
+      max-width: 90%;
     }
   
     .assistants-title {
@@ -136,10 +114,7 @@
   
 
 
-  /* -*------------------------ */
 
-
-  /* Sidebar overlay */
 .sidebar-overlay {
   position: fixed;
   top: 0;
@@ -155,4 +130,4 @@
 
 .sidebar-overlay.open {
   transform: translateX(0);
-}
+} */
