--- a/src/assets/styles/Main.css
+++ b/src/assets/styles/Main.css
@@ -97,7 +97,7 @@
     box-shadow: 0px 4px 10px rgba(136, 127, 127, 0.2);
     background-color: black;
     color: white;
-    border: 1px solid white;
+    border: 1px solid gray;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -142,7 +142,7 @@
 
 .usage-info {
     font-size: 0.8rem;
-    color: var(--text-color);
+    color: gray;
 }
 
 .assistant-card-col {
