--- a/src/Components/Layout/Sidebar/Sidebar.css
+++ b/src/Components/Layout/Sidebar/Sidebar.css
@@ -137,7 +137,7 @@ ul {
   width: 100%;
   text-align: center;
   color: #fff;
-  padding: 15px 0;
+  padding: 15px 5px;
   cursor: pointer;
   flex-shrink: 0; /* Prevent shrinking */
   transition: transform 0.4s ease;
@@ -192,6 +192,5 @@ ul {
 /* When sidebar is collapsed, adjust sub-menu padding */
 .sidebar.sidebarCollapsed .collapse {
   padding-left: 0; /* Removes indentation */
-  /* Alternatively, set to a smaller value to maintain slight indentation */
-  /* padding-left: 10px; */
+
 }
