--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -236,7 +236,7 @@
 }
 
 .dropdown:hover .dropdown-menu {
-  display: block;
+  /* display: block; */
 }
 
 .dropdown-menu li {
@@ -284,3 +284,5 @@
     gap: 15px;
   }
 }
+
+
