--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -200,7 +200,7 @@
   padding: 2px 6px;
   font-weight: bold;
 }
-
+/* -----------------languages -------------------------- */
 /* Dropdown Menu */
 .dropdown {
   position: relative;
@@ -221,6 +221,7 @@
 
 .dropdown .btn:hover {
   background-color: #444;
+  box-shadow: 0px 0px 3px 1px gray ;
 }
 
 .dropdown-menu {
@@ -259,10 +260,11 @@
 
 .dropdown-menu a:hover,
 .dropdown-menu button:hover {
-  background-color: #444;
+  background-color: #333;
+  color: white;
 }
 
-.dropdown-menu i {
+.dropdown-menu i {  
   margin-right: 8px;
   color: white;
 }
