--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@ body{
     color: #fff;
     font-family: Poppins, Tajawal, sans-serif;
 }
+/* Add this in your global CSS */
+body[dir="rtl"] {
+    direction: rtl;
+    text-align: right;
+  }
+  
