--- a/src/Components/Layout/Footer/Footer.css
+++ b/src/Components/Layout/Footer/Footer.css
@@ -90,7 +90,7 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     width: 100%;
-    padding: 3rem 4.5%;
+    padding: 2rem 1% 0rem 4.5%;
   }
   
   /* Pre-Landing Footer Section */
