--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -107,7 +107,7 @@
 }
 
 .header-search-input {
-  padding: 10px 35px 10px 10px;
+  /* padding: 10px 35px 10px 10px; */
   border: 1px solid #ccc;
   border-radius: 5px;
   outline: none;
