--- a/src/Components/Layout/Sidebar/Sidebar.css
+++ b/src/Components/Layout/Sidebar/Sidebar.css
@@ -13,7 +13,7 @@
   height: 100vh; /* Full viewport height */
   position: fixed;
   top: 0;
-  left: 0;
+  /* left: 0; */
   z-index: 99999;
   transition: all 0.4s ease-out;
   overflow: hidden; /* Hide default overflow */
