--- a/src/Components/Layout/Sidebar/Sidebar.css
+++ b/src/Components/Layout/Sidebar/Sidebar.css
@@ -83,7 +83,7 @@ ul {
   background: none;
   border: none;
   width: 100%;
-  text-align: left;
+  text-align: start;
   /* background-color: violet; */
 }
 
@@ -100,12 +100,12 @@ ul {
 
 .sidebar-menu li .sidebar-link span {
   display: inline-block;
-  padding-left: 12px;
+  padding-inline-start: 12px;
   transition: opacity 0.4s ease-out;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  width: 200px;
+  width: 90%;
 }
 
 .sidebar-menu li .sidebar-link {
@@ -156,7 +156,7 @@ ul {
 .sidebar.sidebarCollapsed .sidebar-menu li .sidebar-link span {
   opacity: 0;
   position: absolute;
-  left: 55px;
+  /* left: 55px; */
 }
 
 /* Scrollbar Styling (Optional) */
@@ -168,7 +168,7 @@ ul {
 .sidebar-menu li button.sidebar-link {
   background: none;
   border: none;
-  padding: 10px 15px;
+  /* padding: 10px 15px; */
   color: #fff;
   text-decoration: none;
   border-radius: 6px;
