edit the i18n.js file to check the lang in the localstorage first befor render the data

--- a/src/Components/Layout/Header/Header.css
+++ b/src/Components/Layout/Header/Header.css
@@ -6,12 +6,12 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  background-color: #000000; /* Match the black background */
+  background-color: #000000; 
   padding: 24px 50px;
-  position: fixed; /* Make the header fixed */
-  top: 0; /* Position it at the top */
-  width: 100%; /* Ensure the header spans the full width of the viewport */
-  z-index: 1000; /* Ensure the header stays on top of other elements */
+  position: fixed; 
+  top: 0; 
+  width: 100%; 
+  z-index: 1000; 
   min-height: 80px;
 }
 
