--- a/src/Components/Layout/Footer/Footer.css
+++ b/src/Components/Layout/Footer/Footer.css
@@ -164,7 +164,7 @@
     text-align: center;
     font-size: 0.85rem;
     font-weight: 400;
-    color: #fff;
+    color: #fff9;
     border-right: 1px solid #fff;
     padding-right: 1rem;
     transition: color 0.3s ease;
